kubernetes/apps/default/tautulli/app/route.yaml
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/route.openshift.io/route_v1.json
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: tautulli
  labels:
    ingress: grappleberry
spec:
  host: tautulli.grappleberry.xyz
  port:
    targetPort: 8181
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  to:
    kind: Service
    name: tautulli
    weight: 100
  wildcardPolicy: None
